--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="container">
     <button>Enter</button>
     <br/>
+    <div id="hello"> </div>
     <a href="https://google.com" target="_blank">google</a>
   </div>
   
